--- a/index.css
+++ b/index.css
@@ -1,3 +1,50 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo {
+    width: 150px;
+}
+
+.nav-items>ul{
+    padding: 10px 20px;
+    font-size: 24px;
+    display: flex;
+    list-style-type: none;
+}
+
+.nav-items>ul >li{
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-containers {
+    display: flex;
+    flex-wrap: wrap;
+}
+.res-card{
+    margin: 5px;
+    width: 191px;
+    background: lightgray;
+    padding: 17px
+    
+}
+
+.res-card :hover{
+    border: 1px solid #000;
+    cursor: pointer;
+}
+
+.search{
+    padding: 10px;
+}
+
+.res-logo{
+    width: 200px;
+    height: 200px;
+}
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
